# tiger-agents-for-work

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  architecture.md  docker-compose.yml  mcp_config.json  pyproject.toml  slack-manifest.json  start.sh  system_prompt.md  user_prompt.md
.github/workflows/: publish-docker-images.yaml
app/: __init__.py  agent.py  bot.py  data_types.py  events.py  main.py  mcp_servers.py  types.py
app/agents/: docs.py  eon.py  filtering_agent.py  progress.py  sales.py
app/utils/: db.py  mcp.py  prompt.py  slack.py
docs/: README.md  cli.md  customization_guide.md  database.md  event_harness.md  mcp_config.md  observability.md  prompt_templates.md  slack_app.md  tiger_agent.md
examples/: .gitignore  agent.py  echo.py  main.py  mcp_config.json  memory_agent.py  memory_mcp_config.json  random_fail.py  simple_agent.py
migrations/: runner.py
migrations/idempotent/: 001-event.sql
migrations/sql/: init.sql  migration.sql
prompts/: __init__.py  additional_system_prompt.md.sample  additional_user_prompt.md.sample  system_prompt.md  user_prompt.md
slackdb/: ingest.py  main.py
slackdb/migrations/: runner.py
slackdb/migrations/sql/: init.sql  migration.sql
tests/: test_build_model_settings.py  test_compression.py  test_wrapped_process_tool_call.py
tiger_agent/: __init__.py  __main__.py  agent.py  app.py  commands.py  compression.py  constants.py  events.py  fields.py  harness.py  ingest.py  log_config.py  logging.py  logging_config.py  main.py  mcp_servers.py  models.py  processor.py  slack.py  types.py  user_memory.py  utils.py
tiger_agent/agent/: tiger_agent.py  types.py  utils.py
tiger_agent/agents/: __init__.py  data_types.py  docs.py  eon.py  filtering_agent.py  mcp.py  mcp_servers.py  progress.py  prompt.py  sales.py  util.py
tiger_agent/db/: constants.py  utils.py
tiger_agent/events/: harness.py  salesforce.py  slack.py  types.py  utils.py
tiger_agent/listeners/: __init__.py  harness.py  salesforce.py  slack.py
tiger_agent/logfire/: constants.py  utils.py
tiger_agent/mcp/: constants.py  types.py  utils.py
tiger_agent/migrations/: __init__.py  runner.py
tiger_agent/migrations/idempotent/: 000-timestamptz.sql  001-event.sql  002-admin.sql  002-user-mem.sql  003-insert-event-hist.sql
tiger_agent/migrations/incremental/: 001-event.sql  002-event-processed.sql  002-user-mem.sql  003-admin.sql  003-event-type-subtype.sql  003-interaction.sql  004-customer-channels-salesforce-link.sql  004-drop-old-functions.sql  005-salesforce-case-thread.sql  006-custom-rules.sql  006-user-defined-rules.sql
tiger_agent/prompts/: system_prompt.md  types.py  user_prompt.md  utils.py
tiger_agent/salesforce/: case_feed_item_poller.py  clients.py  constants.py  new_case_poller.py  topics.py  types.py  utils.py
tiger_agent/slack/: commands.py  constants.py  types.py  utils.py
tiger_agent/tasks/: custom_rules.py  handlers.py  harness.py  types.py  user_defined_rules.py  utils.py
tiger_agent/utils/: __init__.py  db.py  events.py  exception_handling.py  mcp_servers.py  slack.py  type.py
