[project]
name = "tiger-agent"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.7",
    "logfire[httpx,psycopg,system-metrics]>=4.3.6",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-ai>=1.0.7",
    "python-dotenv[cli]>=1.1.1",
    "semver>=3.0.4",
    "slack-bolt>=1.24.0",
    "websockets>=15.0.1",
]

[tool.setuptools.package-data]
"tiger_agent.migrations" = ["**/*.sql"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 88
indent-width = 4
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "ARG",  # unused arguments
    "W291", # trailing whitespace
    "PIE",  # print statements
    "Q"     # flakes8-quote
]
ignore = ["E501"] # we use `ruff format` on everything, so this is just annoying
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"db/tests/*" = ["E501", "SIM117", "W291", "ARG001"]
