[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiger-agent"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "jinja2>=3.1.6",
    "logfire[httpx,psycopg,system-metrics]>=4.10.0",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-ai>=1.28.0",
    "python-dotenv[cli]>=1.1.1",
    "semver>=3.0.4",
    "slack-bolt>=1.26.0",
    "websockets>=15.0.1",
]

[project.scripts]
tiger-agent = "tiger_agent.main:main"

[tool.setuptools.packages.find]
include = ["tiger_agent*"]
exclude = ["examples*", "docs*"]

[tool.setuptools.dynamic]
version = {attr = "tiger_agent.__version__"}

[tool.setuptools.package-data]
"tiger_agent.migrations" = ["**/*.sql"]
"tiger_agent.prompts" = ["*.md"]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 88
indent-width = 4
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "ARG",  # unused arguments
    "W291", # trailing whitespace
    "PIE",  # print statements
    "Q"     # flakes8-quote
]
ignore = ["E501"] # we use `ruff format` on everything, so this is just annoying
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"db/tests/*" = ["E501", "SIM117", "W291", "ARG001"]
